--- a/.editorconfig
+++ b/.editorconfig
@@ -4,4 +4,9 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 indent_style = space
+
+[*.go]
 indent_size = 4
+
+[*.{js,json,ts}]
+indent_size = 2
