--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "all": "yarn compile && yarn proto:build && yarn test",
     "compile": "cd .. && ./build.sh",
+    "lint": "yarn lint:tsc && yarn lint:eslint",
+    "lint:eslint": "eslint . --ext .ts --max-warnings 0",
+    "lint:tsc": "tsc --noEmit && eslint",
     "proto:build": "yarn proto:clean && yarn proto:generate && yarn proto:prettier",
     "proto:clean": "find __tests__/generated ! -name 'tslint.json' ! -name '.prettierrc' -type f -exec rm -f {} +",
     "proto:generate": "export PATH=\"${PWD}/../dist:${PATH}\" && protoc __tests__/proto/*.proto -I __tests__/proto --ts_out=/${PWD}/__tests__/generated",
@@ -20,12 +23,17 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.35",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-node": "^11.1.0",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "jest-watch-typeahead": "^0.4.2",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.5.3",
-    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.2.3"
   }
