feat: add new generator structure

--- a/integrationTests/package.json
+++ b/integrationTests/package.json
@@ -10,7 +10,7 @@
     "lint:tsc": "tsc --noEmit && eslint",
     "proto:build": "yarn proto:clean && yarn proto:generate && yarn proto:prettier",
     "proto:clean": "find __tests__/legacy/generated ! -name 'tslint.json' ! -name '.prettierrc' -type f -exec rm -f {} +",
-    "proto:generate": "export PATH=\"${PWD}/../dist:${PATH}\" && protoc __tests__/legacy/proto/*.proto -I __tests__/legacy/proto --ts_out=\"${PWD}/__tests__/legacy/generated\"",
+    "proto:generate": "export PROTOC_TS_GENERATOR=V2 && export PATH=\"${PWD}/../dist:${PATH}\" && protoc __tests__/legacy/proto/*.proto -I __tests__/legacy/proto --ts_out=\"${PWD}/__tests__/legacy/generated\"",
     "proto:prettier": "prettier --write '__tests__/legacy/generated/**/*.ts'",
     "test": "export PATH=\"${PWD}/../dist:${PATH}\" && jest --runInBand --forceExit"
   },
