feat: enable v2 generation (dummy for now)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,14 @@
   },
   "[json]": {
     "editor.tabSize": 2
+  },
+  "[proto3]": {
+    "editor.tabSize": 2
+  },
+  "protoc": {
+    "compile_on_save": false,
+    "options": [
+      "--proto_path=integrationTests/proto/**/*"
+    ]
   }
 }
