--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,11 +22,8 @@ commands:
           name: Compile
           command: cd ./tests && yarn compile
       - run:
-          name: Generate TS code (legacy)
+          name: Generate TS code
           command: cd ./tests && yarn proto:build
-      - run:
-          name: Generate TS code (v2)
-          command: cd ./tests && yarn v2:build
       - run:
           name: Lint generated code
           command: cd ./tests && yarn lint
