feat: TECH can not read property encode of undefined

--- a/tests/__tests__/.prettierrc
+++ b/tests/__tests__/.prettierrc
@@ -1,5 +1,8 @@
 {
   "semi": false,
+  "printWidth": 120,
   "singleQuote": true,
-  "parser": "typescript"
+  "parser": "typescript",
+  "trailingComma": "all",
+  "arrowParens": "avoid"
 }
